--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="home-content" >
                 <h1>Hi I'm Imran</h1>
                 <h3>CEO of Gift Cards Zone Bd</h3>
-                <p>Currently a graduate student and entrepreneur. I enjoy traveling and am interested in new technology.</p>
+                <p>Currently a undergraduate student and entrepreneur. I enjoy traveling and am interested in new technology.</p>
                 <a href="https://www.giftcardszonebd.com/" class="btn">Visit Store</a>
 
           </div>
